[metadata]
name = opalstack
version = 1.0.1
author = Opalstack
author_email = support@opalstack.com
description = Opalstack API Python Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opalstack/opalstack-python
project_urls =
    Bug Tracker = https://github.com/opalstack/opalstack-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src
